--- a/sormas-app/app/src/main/res/values/strings.xml
+++ b/sormas-app/app/src/main/res/values/strings.xml
@@ -413,9 +413,9 @@
     <string name="heading_contact_tracing_first_contact">First contact with Contact Tracing</string>
     <string name="heading_exposure">Exposure</string>
     <string name="heading_activityAsCase">Activity as Case</string>
-    <string name="heading_campaign_form_data_edit">Edit Campaign Data</string>
-    <string name="heading_campaign_form_data_new">New Campaign Data</string>
-    <string name="heading_campaign_form_data_read">Read Campaign Data</string>
+    <string name="heading_campaign_form_data_edit">Edit Data</string>
+    <string name="heading_campaign_form_data_new">New Entry</string>
+    <string name="heading_campaign_form_data_read">Read Data</string>
     <string name="heading_campaign_form_data_summary">Campaign Data Summary</string>
     <string name="heading_campaign_form_meta_select">Select Campaign Form</string>
     <string name="heading_case_place_of_stay">Place of stay</string>
