- #513 - #511 - #510 - #508  - Data completeness report refactor
 - Aggregate report: listing all forms in db even archived, not those
relevant to campaign (Refactor)

 - User roles list has all the old SORMAS users that were previously
removed (Refactor)

 - After logging out and loggin back in, Dashboard is shown but the
"Sign out" (last thing clicked) is highlighted orange (refactor)

 -Logo is transparent and looks odd on background(Refactor)

 - Buttons too small, text cut off (Refactor)

--- a/sormas-api/src/main/resources/captions_ar.properties
+++ b/sormas-api/src/main/resources/captions_ar.properties
@@ -74,6 +74,8 @@ actionOkay = Okay
 actionConfirmFilters = Confirm filters
 actionResetFilters = Reset filters
 actionSave = Save
+actionSaveAndAddNew = Save And Add New
+
 actionSelectAll = Select all
 actionShowLessFilters = Show Less Filters
 actionShowMoreFilters = Show More Filters
