--- a/sormas-api/src/main/resources/captions_en.properties
+++ b/sormas-api/src/main/resources/captions_en.properties
@@ -1524,6 +1524,7 @@ mainMenuCases=Cases
 mainMenuConfiguration=Configuration
 mainMenuContacts=Contacts
 mainMenuDashboard=Dashboard
+mainMenuAnalyticsDashboard=Analytics Dashboard
 mainMenuEntries=Entries
 mainMenuEvents=Events
 mainMenuImmunizations=Immunizations
