- preparing to merge development

--- a/sormas-api/src/main/resources/captions_en.properties
+++ b/sormas-api/src/main/resources/captions_en.properties
@@ -1404,6 +1404,7 @@ HealthConditions.immunodeficiencyIncludingHiv=Immunodeficiency including HIV
 importDetailed=Detailed Import
 importDownloadCaseImportTemplate=Download Case Import Template
 importDownloadImportTemplate=Download Import Template
+importDefaultPopulationFile=Download Default Population Data File
 importDownloadDataDictionary=Download Data Dictionary
 importDownloadErrorReport=Download Error Report
 importDownloadImportGuide=Download Import Guide
