preparation for Production release

--- a/sormas-app/app/src/main/res/values-en-rAF/strings.xml
+++ b/sormas-app/app/src/main/res/values-en-rAF/strings.xml
@@ -403,7 +403,7 @@
     <string name="heading_contact_tracing_first_contact">First contact with Contact Tracing</string>
     <string name="heading_exposure">Exposure</string>
     <string name="heading_activityAsCase">Activity as Case</string>
-    <string name="heading_campaign_form_data_edit">Edit Campaign Data</string>
+    <string name="heading_campaign_form_data_edit">Edit Campaign Datasss</string>
     <string name="heading_campaign_form_data_new">New Campaign Data</string>
     <string name="heading_campaign_form_data_read">Read Campaign Data</string>
     <string name="heading_campaign_form_data_summary">Campaign Data Summary</string>
