--- a/sormas-app/app/src/main/res/values-fa-rAF/strings.xml
+++ b/sormas-app/app/src/main/res/values-fa-rAF/strings.xml
@@ -23,10 +23,10 @@
 <resources>
     <string name="app_name">APMIS</string>
     <string name="and">and</string>
-    <string name="no">No</string>
+    <string name="no">خیر</string>
     <string name="notAnswered">Not answered</string>
     <string name="system">System</string>
-    <string name="yes">Yes</string>
+    <string name="yes">بله</string>
     <string name="all">All</string>
     <string name="completed">completed</string>
     <string name="action_add_missing_case">Add Missing Case</string>
@@ -403,7 +403,7 @@
     <string name="heading_contact_tracing_first_contact">First contact with Contact Tracing</string>
     <string name="heading_exposure">Exposure</string>
     <string name="heading_activityAsCase">Activity as Case</string>
-    <string name="heading_campaign_form_data_edit">Edit Campaign Data</string>
+    <string name="heading_campaign_form_data_edit">Edit Campaign Data_DD</string>
     <string name="heading_campaign_form_data_new">New Campaign Data</string>
     <string name="heading_campaign_form_data_read">Read Campaign Data</string>
     <string name="heading_campaign_form_data_summary">Campaign Data Summary</string>
@@ -485,7 +485,7 @@
     <string name="main_menu_reports">Reports</string>
     <string name="main_menu_samples">Samples</string>
     <string name="main_menu_immunizations">Immunizations</string>
-    <string name="main_menu_settings">Settings</string>
+    <string name="main_menu_settings">کمپین ها</string>
     <string name="main_menu_tasks">Tasks</string>
     <string name="main_menu_aggregate_reports">mSERS</string>
     <string name="message_already_saving">Already saving..</string>
