--- a/sormas-app/app/src/main/res/values-ps-rAF/strings.xml
+++ b/sormas-app/app/src/main/res/values-ps-rAF/strings.xml
@@ -23,10 +23,10 @@
 <resources>
     <string name="app_name">APMIS</string>
     <string name="and">and</string>
-    <string name="no">No</string>
+    <string name="no">نه</string>
     <string name="notAnswered">Not answered</string>
     <string name="system">System</string>
-    <string name="yes">Yes</string>
+    <string name="yes">هو</string>
     <string name="all">All</string>
     <string name="completed">completed</string>
     <string name="action_add_missing_case">Add Missing Case</string>
@@ -485,7 +485,7 @@
     <string name="main_menu_reports">Reports</string>
     <string name="main_menu_samples">Samples</string>
     <string name="main_menu_immunizations">Immunizations</string>
-    <string name="main_menu_settings">Settings</string>
+    <string name="main_menu_settings">کمپاینونه</string>
     <string name="main_menu_tasks">Tasks</string>
     <string name="main_menu_aggregate_reports">mSERS</string>
     <string name="message_already_saving">Already saving..</string>
