--- a/sormas-api/src/main/resources/captions_en.properties
+++ b/sormas-api/src/main/resources/captions_en.properties
@@ -66,6 +66,9 @@ latestPathogenTest=Latest Pathogen test\:
 unknown=Unknown
 diseaseVariantDetails=Disease variant details
 account=Account
+preCampaign=Pre-Campaign
+intraCampaign=Intra-Campaign
+postCampaign=Post-Campaign
 
 # About
 about=About
