- Updating System Caption

--- a/sormas-api/src/main/resources/captions_ar.properties
+++ b/sormas-api/src/main/resources/captions_ar.properties
@@ -74,6 +74,7 @@ actionOkay = Okay
 actionConfirmFilters = Confirm filters
 actionResetFilters = Reset filters
 actionSave = Save
+actionAdd = Add
 actionSaveAndAddNew = Save And Add New
 
 actionSelectAll = Select all
@@ -529,9 +530,9 @@ DiseaseBurden.outbreakDistrictCount = Outbreak districts
 DiseaseBurden.previousCaseCount = Previous cases
 
 # District
-districtActiveDistricts = Active districts
-districtArchivedDistricts = Archived districts
-districtAllDistricts = All districts
+districtActiveDistricts = Active
+districtArchivedDistricts = Archived
+districtAllDistricts = All
 
 District.archived=Archived
 District.epidCode = Epid code
