--- a/sormas-api/src/main/resources/captions_en.properties
+++ b/sormas-api/src/main/resources/captions_en.properties
@@ -644,9 +644,9 @@ columnVaccineManufacturer=Vaccine manufacturer
 Community.archived=Archived
 Community.externalID=CCode
 
-communityActiveCommunities=Active clusters
-communityArchivedCommunities=Archived clusters
-communityAllCommunities=All clusters
+communityActiveCommunities=Active
+communityArchivedCommunities=Archived
+communityAllCommunities=All
 
 # Configuration
 Configuration.Facilities=Facilities
@@ -1011,10 +1011,9 @@ DiseaseBurden.outbreakDistrictCount=Outbreak districts
 DiseaseBurden.previousCaseCount=Previous cases
 
 # District
-districtActiveDistricts=Active districts
-districtArchivedDistricts=Archived districts
-districtAllDistricts=All districts
-
+districtActiveDistricts=Active
+districtArchivedDistricts=Archived
+districtAllDistricts=All
 District.archived=Archived
 District.epidCode=Code No
 District.growthRate=Growth rate
