--- a/sormas-api/src/main/resources/captions_en.properties
+++ b/sormas-api/src/main/resources/captions_en.properties
@@ -70,6 +70,8 @@ preCampaign=Pre-Campaign
 intraCampaign=Intra-Campaign
 postCampaign=Post-Campaign
 
+
+
 # About
 about=About
 aboutAdditionalInfo=Additional Info
@@ -348,6 +350,10 @@ caseFilterOnlyCasesNotSharedWithExternalSurvTool=Only cases not yet shared with 
 caseFilterOnlyCasesSharedWithExternalSurvToo=Only cases already shared with reporting tool
 caseFilterOnlyCasesChangedSinceLastSharedWithExternalSurvTool=Only cases changed since last shared with reporting tool
 caseFilterOnlyCasesWithDontShareWithExternalSurvTool=Only cases marked with 'Don't share with reporting tool'
+
+dataTimeliness =Data Timeliness Report
+dataTimeLinessLateFormCount=Late Form Count
+percentage=Percentage
 
 caseFacilityDetailsShort=Sub Cluster name
 caseNewCase=New case
